# SHREC-Process

./: .gitignore  README.md  auto.sh  bad.txt  badobj2pcd.sh  copymodel.py  copyply.py  get_hdf5_data.py  mesh_sampling_self  model.txt  normalization  obj2pcd.sh  ply2pcd.sh  ply_normalize.sh  ply_resampling.sh  render_obj2png.py  resampling  snnply_test.txt  snnply_train.txt  snnply_val.txt  test_answer.csv  train.csv  validation.csv  visualization.py  write_hdf5.py  使用步骤.md
SUNdatabast_img_0063/: intrinsics.txt  seg.mat  show_RGBD.py
SUNdatabast_img_0063/annotation/: index.json
SUNdatabast_img_0063/annotation2D3D/: index.json  index.json_20150710085639  index.json_20150710085658  index.json_20150710085709  index.json_20150710085715  index.json_20150710085730  index.json_20150710085739  index.json_20150710085748
SUNdatabast_img_0063/annotation3D/: index.json
SUNdatabast_img_0063/annotation3Dfinal/: index.json
SUNdatabast_img_0063/annotation3Dlayout/: index.json
SUNdatabast_img_0063/extrinsics/: 20140915210114.txt
SUNdatabast_img_0063/fullres/: intrinsics.txt
findPlane/: CMakeLists.txt  Initialize_RT.txt  calculateRT.m  cloud_findPlane.cpp  cloud_findPlane2.cpp  icp.cpp  render.cpp  viewManyPly.cpp  viewManyRender.cpp  viewOne.cpp  viewPLY.cpp  viewRT.cpp
findPlane/pcd/: A_normals.txt  B_normals.txt
icp/: CMakeLists.txt  Initialize_RT.1.txt  Initialize_RT.2.txt  Initialize_RT.txt  cloud_icp.cpp  cloud_icp.cpp.right_icp  rt.txt
pointdeal_cpp/: CMakeLists.txt  mesh_sampling.cpp  normalization.cpp  resampling.cpp
unusedFile/: chair.txt
